--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 		    <version>4.0.0</version>
 		</dependency>
 		<dependency>
+		  <groupId>com.google.guava</groupId>
+		  <artifactId>guava</artifactId>
+		  <version>27.0.1-jre</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
